Minor changes in paper

--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -241,11 +241,11 @@ unicode=true,
 
 \acknowledgements
 \noindent
-Chtěl bych především poděkovat panu Ing. Pavlu Strnadovi, že se mě ujal jako vedoucí jak semestrálního projektu tak Bakalářské práce a poskytl mi rady a motivaci. Poděkování také patří mé přítelkyni a rodině za nemalou podporu při tvorbě bakalářské práce a v průběhu celého studia.
+Chtěl bych především poděkovat panu Ing. Pavlu Strnadovi, že se mě ujal jako vedoucí jak semestrálního projektu, tak Bakalářské práce a poskytl mi rady a motivaci. Poděkování také patří mému tatínkovi, rodině a přítelkyni za velkou podporu při tvorbě bakalářské práce a v průběhu celého studia.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%   Prohlaseni / Declaration 
 
-\declaration{V~Praze dne 25.\,5.\,2012}
+\declaration{V~Praze dne 22.\,5.\,2012}
 %\declaration{In Prague on March 18, 2012}
 
 
@@ -438,7 +438,7 @@ Všechny případy užití předpokládají vytvořenou instanci RubyACL, která
 \begin{figure}
 %\centering
 \includegraphics[width=15cm]{UseCases.jpg}
-\caption{UseCases}
+\caption{Případy užití}
 \label{fig:usecase}
 \end{figure}
 
@@ -487,25 +487,6 @@ Po spuštění těchto příkazů najdete pomocí eXist Admin Clientu, v kolekci
 
 %*****************************************************************************
 \chapter{Obsah přiloženého CD}
-\textbf{\large Tato příloha je povinná pro každou práci. Každá práce musí totiž obsahovat přiložené CD. Viz dále.}
-
-Může vypadat například takto. Váš seznam samozřejmě bude odpovídat typu vaší práce. (viz \cite{infodp}):
-
-\begin{figure}[h]
-\begin{center}
-\includegraphics[width=14cm]{figures/seznamcd}
-\caption{Seznam přiloženého CD --- příklad}
-\label{fig:seznamcd}
-\end{center}
-\end{figure}
-
-Na GNU/Linuxu si strukturu přiloženého CD můžete snadno vyrobit příkazem:\\ 
-\verb|$ tree . >tree.txt|\\
-Ve vzniklém souboru pak stačí pouze doplnit komentáře.
-
-Z \textbf{README.TXT} (případne index.html apod.)  musí být rovněž zřejmé, jak programy instalovat, spouštět a jaké požadavky mají tyto programy na hardware.
-
-Adresář \textbf{text}  musí obsahovat soubor s vlastním textem práce v PDF nebo PS formátu, který bude později použit pro prezentaci diplomové práce na WWW.
 
 \begin{verbatim}
 .
@@ -515,8 +496,8 @@ Adresář \textbf{text}  musí obsahovat soubor s vlastním textem práce v PDF 
 |   `-- RabstractCZ.html         - rozšířený abstract v češtině
 |-- gem                          - adresář obsahující instalační balíčky gem
 |-- index.html                   - výchozí stránka projektu - z ní realtivní 
-|                                   html odkazy na dokumentaci, zdrojové 
-|                                   texty a exe soubor
+|                                   html odkazy na dokumentaci a zdrojové 
+|                                   texty
 |-- install.TXT                  - postup instalace knihovny
 |-- rdoc                         - adresář s rdoc dokumentací
 |   |-- eXistAPI                 - rdoc dokumentace k eXistAPI
